--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: BleRiFa
+title:
+  fr: BleRiFa
+  en: BleRiFa
 email: contact@julienduroure.com
-description: > # this means to ignore newlines until "baseurl:"
-  BleRiFa is a toolset to simplify your rigging life !
+description:
+  en: BleRiFa is a toolset to simplify your rigging life !
+  fr: BleRiFa est une boite à outils pour le Rigging et l'Animation !
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://julienduroure.github.io/BleRiFa" # the base hostname & protocol for your site
 index:
