possibility to have more than 1 link

--- a/_data/trad.yml
+++ b/_data/trad.yml
@@ -1,6 +1,6 @@
 getit:
-  fr: Télécharger l'addon
-  en: Get this addon
+  fr: Télécharger l'addon sur 
+  en: Get this addon on 
 see_doc:
   fr: Voir la documentation
   en: See documentation
