--- a/_data/trad.yml
+++ b/_data/trad.yml
@@ -7,3 +7,6 @@ see_doc:
 no_download:
   fr: Cet Addon n'est pas encore disponible publiquement
   en: There is still no public version of this Addon
+latest_news:
+  fr: Dernières News
+  en: Latest News
