--- a/_data/trad.yml
+++ b/_data/trad.yml
@@ -10,3 +10,6 @@ no_download:
 latest_news:
   fr: Dernières News
   en: Latest News
+video_not_supported:
+  fr: Le navigateur ne supporte pas les vidéos html5
+  en: your browser doesn't support html5 videos
