--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ index:
   fr: /fr/
 twitter_username: julienduroure
 github_username:  julienduroure
+analytics: false #false or UA_ID
 
 # Build settings
 markdown: kramdown
