--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ index:
 twitter_username: julienduroure
 github_username:  julienduroure
 analytics: false #false or UA_ID
+copyright: "&copy 2016 Julien Duroure / BleRiFa"
 
 # Build settings
 markdown: kramdown
