--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title:
   fr: BleRiFa
   en: BleRiFa
-email: contact@julienduroure.com
+email: contact@blerifa.com
 description:
   en: BleRiFa is a toolset to simplify your rigging life !
   fr: BleRiFa est une boite à outils pour le Rigging et l'Animation !
