add analytics ID

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ index:
   
 twitter_username: julienduroure
 github_username:  julienduroure
-analytics: false #false or UA_ID
+analytics: UA-78237982-1 #false or UA_ID
 
 copyright: "&copy 2016 Julien Duroure / BleRiFa"
 julienduroure: http://julienduroure.com
