add link to post list on post detail

--- a/_data/trad.yml
+++ b/_data/trad.yml
@@ -25,3 +25,9 @@ read_more:
 read_all_news:
   fr: ... Lire toutes les news
   en: ... Read all news
+back:
+  fr: Retourner à la liste des articles
+  en: Back to post list
+blog_url:
+  fr: /news-fr/
+  en: /news/
