update copyright year

--- a/_dev.yml
+++ b/_dev.yml
@@ -24,7 +24,7 @@ twitter_username: julienduroure
 github_username:  julienduroure
 analytics: false #false or UA_ID
 
-copyright: "&copy 2016 Julien Duroure / BleRiFa"
+copyright: "&copy 2016-2017 Julien Duroure / BleRiFa"
 julienduroure: http://julienduroure.com
 
 # Build settings
