Move to BleRiFa twitter account

--- a/_dev.yml
+++ b/_dev.yml
@@ -20,7 +20,8 @@ index:
   en: /
   fr: /fr/
 
-twitter_username: julienduroure
+twitter_username: blerifa_tools
+twitter_label: BleRiFa
 github_username:  julienduroure
 analytics: false #false or UA_ID
 
