--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ index:
   en: /
   fr: /fr/
 
-twitter_username: julienduroure
+twitter_username: blerifa_tools
+twitter_label: BleRiFa
 github_username:  julienduroure
 analytics: UA-35258207-7 #false or UA_ID
 
